--- a/teamdocumentatie/logboek_brian/Scorion formulieren/Sprint 1/Expert Review/Mats_O_24_4_2024.md
+++ b/teamdocumentatie/logboek_brian/Scorion formulieren/Sprint 1/Expert Review/Mats_O_24_4_2024.md
@@ -4,20 +4,17 @@ In deze sprint heb ik tot nu toe geprobeerd verbinding te maken met de NAO robot
 
 In deze sprint moeten we vooral nog onze plannen een beetje uitwerken. Ik kreeg mee als feedback dat ik voor elke Kwaliteitscriteria doelen kon opstellen die ik zou kunnen nastreven. Wat wil ik doen voor welke K, en welke criteria stel ik voor mezelf op?
 
-K1: K1 gaat over OOP programmeren en database ontwerp (en de interactie tussen die twee). Voor dit project zijn we dus van plan om python te gebruiken voor het programmeren van de NAO robot. Aan het eind van de middag was het ons eindelijk gelukt om met python via Visual Studio Code de robot te laten bewegen. Wij hebben hiervoor een simpele code example gebruikt met behulp van chatGPT. Op basis van hoe de code eruitzag zou ik kunnen zeggen dat OOP programmeren in python niet een grote uitdaging zou zijn.
+K1: K1 gaat over OOP programmeren en database ontwerp (en de interactie tussen die twee). Voor dit project zijn we dus van plan om python te gebruiken voor het programmeren van de NAO robot. Aan het eind van de middag was het ons eindelijk gelukt om met python via Visual Studio Code de robot te laten bewegen. Wij hebben hiervoor een simpele code voorbeeld code gebruikt. Op basis van hoe de code eruit zag zou ik zeggen dat OOP programmeren in python wel moet lukken. De meeste van ons groepje hebben dit jaar nog niet echt iets gedaan met python. Daarnaast is de python SDK voor de NAO robot ook het meest uitgebreid. Voor deze 2 redenen lijkt me het dus verstandig om met dit project lekker aan de slag te gaan met python.
 
-De meeste van ons groepje hebben dit jaar nog niet echt iets gedaan met python. Daarnaast is de python SDK voor de NAO robot ook het meest uitgebreid. Voor deze 2 redenen lijkt me het dus verstandig om met dit project lekker aan de slag te gaan met python.
+Voor de database hebben we een ERD nodig en een uitwerking daarvan. We zijn op dit moment nog een beetje aan het uitvogelen wat we precies willen gaan doen met de database naast het bijhouden van bingo nummers en de hoeveelheid bingo's die zijn omgeroepen. Om het database aspect te bewijzen vind ik het voor mezelf belangrijk om een goed database ontwerp te kunnen maken, want ik denk dat dat iets is waar ik zelf nog een beetje moeite mee heb.
 
-K3: Infrastructuur. I
+K3: Het programmeren van de robot. We hebben tot nu toe een beetje een idee gekregen van hoe we kunnen werken met de SDK en de bijbehorende documentatie. We kunnen op dit moment spraak programmeren en de robot simpele bewegingen laten maken. We kunnnen de taken verdelen iedereen een aparte beweging te laten programmeren, bijvoorbeeld dat 1 of 2 mensen werken aan de loop functie van de robot, terwijl anderen de arm bewegingen ontwikkelen. Vervolgens kan iemand anders van het team bezig zijn met het programmeren van spraak. Zo kan iedereen een beetje wat hebben bijgedragen aan de ontwikkeling van de robot, en kunnen mensen ook oefenen met OOP programmeren in python. Daarnaast willen we de robot met een raspberry pi laten interacteren zodat de genoemde getallen bijvoorbeeld in een database kunnen worden bijgehouden etc.
 
-K1: https://gitlab.fdmci.hva.nl/propedeuse-hbo-ict/onderwijs/2023-2024/out-a-se-ti/blok-4/nooraamooquu78/-/blob/main/docs/documentatie/UML_diagram.md?ref_type=heads
+We gaan de taken verdelen, ik zat er zelf aan te denken om de arm bewegingen te programmeren, bijvoorbeeld dat de robot zwaait naar z'n toeschouwers. 
+Daarnaast heb ik zelf ook nog documentatie geschreven voor m'n teamleden voor hoe ze de python SDK moeten installeren en hoe ze hier mee moeten programmeren.
 
-K3: https://gitlab.fdmci.hva.nl/propedeuse-hbo-ict/onderwijs/2023-2024/out-a-se-ti/blok-4/nooraamooquu78/-/blob/main/docs/architecture/architecture_diagram.md?ref_type=heads
+K4: We hebben verschillende ideeën opgebracht waar we aan kunnen werken op het embedded gebied. We moeten nog kijken wie wat gaat doen, maar het is de bedoeling dat iedereen voor K4 gaat documenteren hoe ze een embedded onderdeel maken binnen het project. Als iemand werkt aan de de grijper bijvoorbeeld, zou diegene kunnen documenteren hoe ze de elektromagneet in de hand van de NAO robot hebben gekregen en hoe deze elektromagneet wordt aangestuurd. Ik wil zelf voor iedergeval weer een mini onderzoek doen over het embedded onderdeel waar ik aan werk.
 
-K4: https://gitlab.fdmci.hva.nl/propedeuse-hbo-ict/onderwijs/2023-2024/out-a-se-ti/blok-4/nooraamooquu78/-/blob/main/teamdocumentatie/elektromagneet.md?ref_type=heads
+K5: Voor ons project willen we een bingo machine maken die kan ronddraaien zodra er een willekeurig getal wordt getrokken. Ook willen we een grijper maken door middel van een elektromagneet waarmee we onze robot een bingo balletje kan oppakken. Naast het feit dat de robot het getal omroept zouden we ook een lcd schermpje bovenop de bingomachine kunnen doen waarop men kan zien welk getal is getrokken. Tenslotte willen we een knop maken voor de spelers waarop gedrukt kan worden zodra een speler bingo heeft. 
 
-K5: https://gitlab.fdmci.hva.nl/propedeuse-hbo-ict/onderwijs/2023-2024/out-a-se-ti/blok-4/nooraamooquu78/-/blob/main/docs/documentatie/NAO_python_SDK_setup.md?ref_type=heads
-
-Feedback:
-
-Embedded: 
+Wat mij zelf erg leuk lijkt is om te werken aan de bingo machine zelf. We hadden eerst in gedachte dus dat we de robot zelf laten draaien aan de molen van de bingo machine, maar het lijkt me wel schattig (en vooral ook veel praktischer) als de bingo machine dat uitzichzelf kan doen op instructie van de NAO. Ik heb dit jaar nog niet iets gedaan met een servomotor dus dat is wel een goede uitdaging opzich.
